cmake_minimum_required(VERSION 3.16)
project(QtAgOpenGPS VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt6 6.4 REQUIRED COMPONENTS Gui Network OpenGL Quick QuickWidgets)

qt_standard_project_setup()

qt_add_executable(QtAgOpenGPS WIN32 MACOSX_BUNDLE
    aogproperties.cpp
    aogproperty.cpp aogproperty.h
    aogrenderer.cpp aogrenderer.h
    aogsettings.cpp aogsettings.h
    btnenum.h
    classes/cabcurve.cpp classes/cabcurve.h
    classes/cabline.cpp classes/cabline.h
    classes/cahrs.cpp classes/cahrs.h
    classes/cboundary.cpp classes/cboundary.h
    classes/cboundarylist.cpp classes/cboundarylist.h
    classes/ccamera.cpp classes/ccamera.h
    classes/ccontour.cpp classes/ccontour.h
    classes/cdubins.cpp classes/cdubins.h
    classes/cfence.cpp
    classes/cfielddata.cpp classes/cfielddata.h
    classes/cflag.cpp classes/cflag.h
    classes/cguidance.cpp classes/cguidance.h
    classes/chead.cpp
    classes/cheadline.cpp classes/cheadline.h
    classes/cmodulecomm.cpp classes/cmodulecomm.h
    classes/cnmea.cpp classes/cnmea.h
    classes/cpatches.cpp classes/cpatches.h
    classes/cpgn.cpp classes/cpgn.h
    classes/crecordedpath.cpp classes/crecordedpath.h
    classes/csection.cpp classes/csection.h
    classes/csim.cpp classes/csim.h
    classes/ctool.cpp classes/ctool.h
    classes/ctrack.cpp classes/ctrack.h
    classes/ctram.cpp classes/ctram.h
    classes/cturn.cpp
    classes/cturnlines.cpp
    classes/cvehicle.cpp classes/cvehicle.h
    classes/cworldgrid.cpp classes/cworldgrid.h
    classes/cyouturn.cpp classes/cyouturn.h
    classes/glm.h
    classes/vec2.cpp classes/vec2.h
    classes/vec3.cpp classes/vec3.h
    classes/vec4.cpp classes/vec4.h
    classes/vecfix2fix.h
    common.h
    formgps.cpp formgps.h
    formgps_classcallbacks.cpp
    formgps_opengl.cpp
    formgps_position.cpp
    formgps_saveopen.cpp
    formgps_sections.cpp
    formgps_settings.cpp
    formgps_sim.cpp
    formgps_udpcomm.cpp
    formgps_ui.cpp
    formgps_ui_boundary.cpp
    formgps_ui_field.cpp
    formgps_ui_tracks.cpp
    formgps_ui_vehicle.cpp
    formheadache.cpp formheadache.h
    formheadland.cpp formheadland.h
    glutils.cpp glutils.h
    interfaceproperty.h
    main.cpp
    properties.h
    qmlsectionbuttons.cpp qmlsectionbuttons.h
    qmlsettings.cpp qmlsettings.h
    qmlsettings_addkeys.cpp
    qmlutil.h
    testlists.cpp
    testnmea.cpp
)
target_include_directories(QtAgOpenGPS PRIVATE
    classes
)

target_compile_definitions(QtAgOpenGPS PRIVATE
    QT_DEPRECATED_WARNINGS
)

target_link_libraries(QtAgOpenGPS PRIVATE
    Qt::Core
    Qt::Gui
    Qt::Network
    Qt::OpenGL
    Qt::Quick
    Qt::QuickWidgets
)


# Resources:
set(agopengps_resource_files
    "images/A2D3D.png"
    "images/ABDraw.png"
    "images/ABLineCycle.png"
    "images/ABLineCycleBk.png"
    "images/ABLineDelete.png"
    "images/ABLineEdit.png"
    "images/ABLineOff.png"
    "images/ABLineOn.png"
    "images/ABLineSnapEdit.png"
    "images/ABSmooth.png"
    "images/ABSnapNudgeMenu.png"
    "images/ABSnapNudgeMenuRef.png"
    "images/ABSwapPoints.png"
    "images/ABTrackA+.png"
    "images/ABTrackAB.png"
    "images/ABTrackCurve.png"
    "images/ABTracks.png"
    "images/ABTramLine.png"
    "images/APlusMinusA.png"
    "images/APlusMinusB.png"
    "images/APlusPlusA.png"
    "images/APlusPlusB.png"
    "images/AcHa.png"
    "images/AddNew.png"
    "images/AgIO.png"
    "images/Antenna4WD.png"
    "images/AntennaHarvester.png"
    "images/AntennaTractor.png"
    "images/AppIcon.ico"
    "images/AppIcon64.ico"
    "images/AppIcon64.png"
    "images/AreaSide.png"
    "images/ArrowLeft.png"
    "images/ArrowRight.png"
    "images/AutoManualIsAuto.png"
    "images/AutoSteerConf.png"
    "images/AutoSteerConfig.png"
    "images/AutoSteerOff.png"
    "images/AutoSteerOn.png"
    "images/AutoSteerSnapToPivot.png"
    "images/AutoStop.png"
    "images/BackSpace.png"
    "images/Boundary.png"
    "images/BoundaryCurveLine.png"
    "images/BoundaryDelete.png"
    "images/BoundaryDeleteAll.png"
    "images/BoundaryLeft.png"
    "images/BoundaryLoadFromGE.png"
    "images/BoundaryLoadMultiFromGE.png"
    "images/BoundaryMenu.png"
    "images/BoundaryOuter.png"
    "images/BoundaryRecord.png"
    "images/BoundaryRight.png"
    "images/BrightnessDn.png"
    "images/BrightnessUp.png"
    "images/Camera2D64.png"
    "images/Camera3D64.png"
    "images/Camera54.png"
    "images/CameraNorth2D.png"
    "images/CameraNorth64.png"
    "images/Cancel64.png"
    "images/Chart.png"
    "images/Color.png"
    "images/ColorBackGnd.png"
    "images/ColorField.png"
    "images/ColorLocked.png"
    "images/ColorUnlocked.png"
    "images/ColourPick.png"
    "images/ComPorts.png"
    "images/Con_SourcesGPSDual.png"
    "images/Con_SourcesGPSSingle.png"
    "images/Con_SourcesRTKAlarm.png"
    "images/Config/4WD/z_4WDFrontAoG.png"
    "images/Config/4WD/z_4WDFrontCase.png"
    "images/Config/4WD/z_4WDFrontChallenger.png"
    "images/Config/4WD/z_4WDFrontJDeere.png"
    "images/Config/4WD/z_4WDFrontNH.png"
    "images/Config/4WD/z_4WDRearAoG.png"
    "images/Config/4WD/z_4WDRearCase.png"
    "images/Config/4WD/z_4WDRearChallenger.png"
    "images/Config/4WD/z_4WDRearJDeere.png"
    "images/Config/4WD/z_4WDRearNH.png"
    "images/Config/Brand/AoG.png"
    "images/Config/Brand/Case.png"
    "images/Config/Brand/Challenger.png"
    "images/Config/Brand/Claas.png"
    "images/Config/Brand/Deutz.png"
    "images/Config/Brand/Fendt.png"
    "images/Config/Brand/JohnDeere.png"
    "images/Config/Brand/Kubota.png"
    "images/Config/Brand/Massey.png"
    "images/Config/Brand/NewHolland.png"
    "images/Config/Brand/Same.png"
    "images/Config/Brand/Steyr.png"
    "images/Config/Brand/TriangleVehicle.png"
    "images/Config/Brand/Ursus.png"
    "images/Config/Brand/Valtra.png"
    "images/Config/CmPixel.png"
    "images/Config/ConD_AutoDayNight.png"
    "images/Config/ConD_ExtraGuides.png"
    "images/Config/ConD_FloorTexture.png"
    "images/Config/ConD_FullScreenBegin.png"
    "images/Config/ConD_Grid.png"
    "images/Config/ConD_Imperial.png"
    "images/Config/ConD_KeyBoard.png"
    "images/Config/ConD_LightBar.png"
    "images/Config/ConD_LogNMEA.png"
    "images/Config/ConD_Metric.png"
    "images/Config/ConD_Poligons.png"
    "images/Config/ConD_RollHelper.png"
    "images/Config/ConD_Sky.png"
    "images/Config/ConD_Speedometer.png"
    "images/Config/ConDa_InvertRoll.png"
    "images/Config/ConDa_RemoveOffset.png"
    "images/Config/ConDa_ResetIMU.png"
    "images/Config/ConDa_RollSetZero.png"
    "images/Config/ConF_HydLiftSound.png"
    "images/Config/ConF_SteerSound.png"
    "images/Config/ConF_TurnSound.png"
    "images/Config/ConMa_LiftLowerTime.png"
    "images/Config/ConMa_LiftRaiseTime.png"
    "images/Config/ConST_Danfoss.png"
    "images/Config/ConS_Brand.png"
    "images/Config/ConS_ImplementAntenna.png"
    "images/Config/ConS_ImplementConfig.png"
    "images/Config/ConS_ImplementHitch.png"
    "images/Config/ConS_ImplementOffset.png"
    "images/Config/ConS_ImplementPivot.png"
    "images/Config/ConS_ImplementSection.png"
    "images/Config/ConS_ImplementSettings.png"
    "images/Config/ConS_ImplementSwitch.png"
    "images/Config/ConS_ModulesMachine.png"
    "images/Config/ConS_ModulesSteer.png"
    "images/Config/ConS_Pins.png"
    "images/Config/ConS_Respnse.png"
    "images/Config/ConS_SourceFix.png"
    "images/Config/ConS_SourcesHeading.png"
    "images/Config/ConS_SourcesRoll.png"
    "images/Config/ConS_VehicleConfig.png"
    "images/Config/ConS_VehicleDim.png"
    "images/Config/ConS_VehicleLines.png"
    "images/Config/ConSt_InvertDirection.png"
    "images/Config/ConSt_InvertRelay.png"
    "images/Config/ConSt_InvertWAS.png"
    "images/Config/ConSt_Mandatory.png"
    "images/Config/ConSt_SteerForm.png"
    "images/Config/ConSt_TurnSensor.png"
    "images/Config/ConSt_TurnSensorCurrent.png"
    "images/Config/ConSt_TurnSensorPressure.png"
    "images/Config/ConT_Asymmetric.png"
    "images/Config/ConT_Inner.png"
    "images/Config/ConT_Outer.png"
    "images/Config/ConT_Symmetric.png"
    "images/Config/ConT_TramBBuffOn.png"
    "images/Config/ConT_TramOverride.png"
    "images/Config/ConT_TramSpacing.png"
    "images/Config/ConU_UturnDistance.png"
    "images/Config/ConU_UturnLength.png"
    "images/Config/ConU_UturnRadius.png"
    "images/Config/ConU_UturnSmooth.png"
    "images/Config/ConU_UturnStepDistance.png"
    "images/Config/ConV_ABLineLength.png"
    "images/Config/ConV_CmPixel.png"
    "images/Config/ConV_GuidanceLookAhead.png"
    "images/Config/ConV_LineWith.png"
    "images/Config/ConV_MaxAngVel.png"
    "images/Config/ConV_MaxAutoSteer.png"
    "images/Config/ConV_MinAutoSteer.png"
    "images/Config/ConV_RevSteer.png"
    "images/Config/ConV_SnapDistance.png"
    "images/Config/Con_Display.png"
    "images/Config/Con_FeatureMenu.png"
    "images/Config/Con_ImplementMenu.png"
    "images/Config/Con_ModulesMenu.png"
    "images/Config/Con_SourcesGPS.png"
    "images/Config/Con_SourcesGPSDual.png"
    "images/Config/Con_SourcesGPSSingle.png"
    "images/Config/Con_SourcesHead.png"
    "images/Config/Con_SourcesMenu.png"
    "images/Config/Con_SourcesRTKAlarm.png"
    "images/Config/Con_TramMenu.png"
    "images/Config/Con_UTurnMenu.png"
    "images/Config/Con_VehicleMenu.png"
    "images/Config/Harvester/z_HarvesterAoG.png"
    "images/Config/Harvester/z_HarvesterCase.png"
    "images/Config/Harvester/z_HarvesterClaas.png"
    "images/Config/Harvester/z_HarvesterJD.png"
    "images/Config/Harvester/z_HarvesterNH.png"
    "images/Config/SectionLookAheadDelay.gif"
    "images/Config/SectionLookAheadOff.gif"
    "images/Config/SectionOnLookAhead.gif"
    "images/Config/ToolGap.png"
    "images/Config/ToolHitchPivotOffsetNeg.png"
    "images/Config/ToolHitchPivotOffsetPos.png"
    "images/Config/ToolOffsetNegativeLeft.png"
    "images/Config/ToolOffsetPositiveRight.png"
    "images/Config/ToolOverlap.png"
    "images/Config/Tractor/z_TractorAoG.png"
    "images/Config/Tractor/z_TractorCase.png"
    "images/Config/Tractor/z_TractorClaas.png"
    "images/Config/Tractor/z_TractorDeutz.png"
    "images/Config/Tractor/z_TractorFendt.png"
    "images/Config/Tractor/z_TractorJDeere.png"
    "images/Config/Tractor/z_TractorKubota.png"
    "images/Config/Tractor/z_TractorMassey.png"
    "images/Config/Tractor/z_TractorNH.png"
    "images/Config/Tractor/z_TractorSame.png"
    "images/Config/Tractor/z_TractorSteyr.png"
    "images/Config/Tractor/z_TractorUrsus.png"
    "images/Config/Tractor/z_TractorValtra.png"
    "images/Config/WindowRestore.png"
    "images/Config/con_VehicleFunctionSpeedLimit.png"
    "images/Config/tractor-raise.gif"
    "images/ContourOff.png"
    "images/ContourOn.png"
    "images/ContourPriorityLeft.png"
    "images/ContourPriorityRight.png"
    "images/CurveOff.png"
    "images/CurveOn.png"
    "images/Display.png"
    "images/DnArrow64.png"
    "images/Examples.png"
    "images/ExitAOG.png"
    "images/FieldClose.png"
    "images/FieldStats.png"
    "images/FieldTools.png"
    "images/FileClose.png"
    "images/FileCopy.png"
    "images/FileDelete.png"
    "images/FileDontSave.png"
    "images/FileEditName.png"
    "images/FileExisting.png"
    "images/FileExplorerWindows.png"
    "images/FileNew.png"
    "images/FileNewAndGo.png"
    "images/FileOpen.png"
    "images/FilePrevious.png"
    "images/FileSave.png"
    "images/FileSaveAs.png"
    "images/FileUse.png"
    "images/First.gif"
    "images/FlagDelete.png"
    "images/FlagDeleteAll.png"
    "images/FlagGrn.png"
    "images/FlagRed.png"
    "images/FlagYel.png"
    "images/GPSQuality.png"
    "images/GoogleEarth.png"
    "images/Headache.png"
    "images/HeadlandBuild.png"
    "images/HeadlandDeletePoints.png"
    "images/HeadlandMenu.png"
    "images/HeadlandOff.png"
    "images/HeadlandOn.png"
    "images/HeadlandReset.png"
    "images/HeadlandSectionOff.png"
    "images/HeadlandSectionOn.png"
    "images/HeadlandSlice.png"
    "images/HeadlandTouchSave.png"
    "images/Help.png"
    "images/HelpCancel.png"
    "images/HideContour.png"
    "images/HideShowMenu.png"
    "images/Home64.png"
    "images/HydraulicLiftOff.png"
    "images/HydraulicLiftOn.png"
    "images/ISOXML.png"
    "images/Images/VehicleOpacity.png"
    "images/Images/z_4WDFront.png"
    "images/Images/z_4WDRear.png"
    "images/Images/z_Compass.png"
    "images/Images/z_Floor.png"
    "images/Images/z_Font.png"
    "images/Images/z_FrontWheels.png"
    "images/Images/z_Harvester.png"
    "images/Images/z_LateralManual.png"
    "images/Images/z_Lift.png"
    "images/Images/z_NoGPS.png"
    "images/Images/z_QuestionMark.png"
    "images/Images/z_ReverseArrow.png"
    "images/Images/z_SkyDay.png"
    "images/Images/z_SkyNight.png"
    "images/Images/z_Speedo.png"
    "images/Images/z_SpeedoNeedle.png"
    "images/Images/z_SteerDot.png"
    "images/Images/z_SteerPointer.png"
    "images/Images/z_Tool.png"
    "images/Images/z_Tractor.png"
    "images/Images/z_TurnCancel.png"
    "images/Images/z_TurnLeft.png"
    "images/Images/z_TurnManual.png"
    "images/Images/z_TurnRight.png"
    "images/Images/z_bingMap.png"
    "images/ImplementSettings.png"
    "images/JobActive.png"
    "images/JobClose.png"
    "images/JobClosed.png"
    "images/JobNameCalendar.png"
    "images/JobNameTime.png"
    "images/KeyHole.png"
    "images/LatLon.png"
    "images/LetterABlue.png"
    "images/LetterBBlue.png"
    "images/Lock.png"
    "images/MakeBoundary.png"
    "images/MakeBoundaryContour.jpg"
    "images/MakeBoundaryContour.png"
    "images/ManualOff.png"
    "images/ManualOn.png"
    "images/MapColor.png"
    "images/MapGray.png"
    "images/MappingOff.png"
    "images/MappingOn.png"
    "images/Marker.png"
    "images/MenuHideShow.png"
    "images/ModePurePursuit.png"
    "images/ModeStanley.png"
    "images/NEWS.png"
    "images/NavigationSettings.png"
    "images/Next.png"
    "images/OK64.png"
    "images/Oops.png"
    "images/OpManual.png"
    "images/Pan.png"
    "images/PeriArea.png"
    "images/PeriDone.png"
    "images/PeriDraw.png"
    "images/PivotAhead.png"
    "images/PivotBehind.png"
    "images/Play.png"
    "images/PointAdd.png"
    "images/PointDelete.png"
    "images/PointDone.png"
    "images/PointStart.png"
    "images/Previous.png"
    "images/RadiusWheelBase.png"
    "images/RadiusWheelBase4WD.png"
    "images/RadiusWheelBaseHarvester.png"
    "images/RecPath.png"
    "images/ResetTool.png"
    "images/ResetTrip.png"
    "images/Reset_Default.png"
    "images/Satellite64.png"
    "images/SectionAuto.png"
    "images/SectionMapping.png"
    "images/SectionMasterOff.png"
    "images/SectionMasterOn.png"
    "images/SectionOff.png"
    "images/SectionOffBelow.png"
    "images/SectionOffBoundary.png"
    "images/SectionOn.png"
    "images/SectionOnBoundary.png"
    "images/SectionSettings.jpg"
    "images/SectionSettings1.jpg"
    "images/SectionSettings2.jpg"
    "images/SectionSettings3.jpg"
    "images/SectionSettings4.jpg"
    "images/SectionSettings5.jpg"
    "images/SectionSettings6.jpg"
    "images/SectionSettings7.jpg"
    "images/SectionSettings8.jpg"
    "images/SectionSettingsTemo.jpg"
    "images/SectionWidth.png"
    "images/SectionsExample.png"
    "images/SemiCircle.png"
    "images/Settings48.png"
    "images/Settings64.png"
    "images/SettingsGear64.png"
    "images/SettingsGearOnly.png"
    "images/Snap64.png"
    "images/SnapLeft.png"
    "images/SnapLeftHalf.png"
    "images/SnapRight.png"
    "images/SnapRightHalf.png"
    "images/SnapToPivot.png"
    "images/Sort.png"
    "images/SpecialFunctions.png"
    "images/Splash.gif"
    "images/Steer/ST_GainTab.png"
    "images/Steer/ST_StanleyTab.png"
    "images/Steer/ST_SteerTab.png"
    "images/Steer/Sf_GainTab.png"
    "images/Steer/Sf_PP.png"
    "images/Steer/Sf_PPTab.png"
    "images/Steer/Sf_Stanley.png"
    "images/Steer/Sf_SteerTab.png"
    "images/Steer/Sf_XTE2.png"
    "images/SteerAhead.png"
    "images/SteerBehind.png"
    "images/SteerCenter.png"
    "images/SteerDriveOff.png"
    "images/SteerDriveOn.png"
    "images/SteerLeft.png"
    "images/SteerRight.png"
    "images/SteerTab.png"
    "images/SteerZero.png"
    "images/SteerZeroSmall.png"
    "images/Stop.png"
    "images/SvennArrow.png"
    "images/SwitchActiveClosed.png"
    "images/SwitchActiveOpen.png"
    "images/SwitchOff.png"
    "images/SwitchOn.png"
    "images/Terminal.png"
    "images/TiltDown.png"
    "images/TiltUp.png"
    "images/Time.png"
    "images/ToolAcceptChange.png"
    "images/ToolChkFront.png"
    "images/ToolChkRear.png"
    "images/ToolChkTBT.png"
    "images/ToolChkTrailing.png"
    "images/ToolHitchPageFront.png"
    "images/ToolHitchPageRear.png"
    "images/ToolHitchPageTBT.png"
    "images/ToolHitchPageTrailing.png"
    "images/ToolPage1.jpg"
    "images/ToolSettings.jpg"
    "images/TrackOn.png"
    "images/TrackVisible.png"
    "images/TramAll.png"
    "images/TramLines.png"
    "images/TramOff.png"
    "images/TramOuter.png"
    "images/Trash.png"
    "images/TrashApplied.png"
    "images/TrashContourRef.png"
    "images/TripOdometer.png"
    "images/TurnManualLeft.png"
    "images/TurnManualRight.png"
    "images/UpArrow64.png"
    "images/VehAft64.png"
    "images/VehFileDelete.png"
    "images/VehFileLoad.png"
    "images/VehFileSave.png"
    "images/VehFileSaveAs.png"
    "images/VehFore64.png"
    "images/VehHitched64.png"
    "images/VehRigid64.png"
    "images/VehicleSettings.jpg"
    "images/VideoLink.png"
    "images/Webcam.png"
    "images/WideReturn.png"
    "images/WindowClose.png"
    "images/WindowDayMode.png"
    "images/WindowMaximize.png"
    "images/WindowMinimize.png"
    "images/WindowNightMode.png"
    "images/WizSteerDot.png"
    "images/WizWasZero.png"
    "images/WizWasZeroReset.png"
    "images/WizardWand.png"
    "images/WorkSwitch.jpg"
    "images/WorkSwitch.png"
    "images/YouSkipOff.png"
    "images/YouSkipOn.png"
    "images/YouTurn80.png"
    "images/YouTurnH.png"
    "images/YouTurnNo.png"
    "images/YouTurnReverse.png"
    "images/YouTurnU.png"
    "images/ZeroPitchRoll.png"
    "images/ZoomIn48.png"
    "images/ZoomOGL.png"
    "images/ZoomOut48.png"
    "images/back-button.png"
    "images/bing.png"
    "images/boundaryPause.png"
    "images/boundaryPlay.png"
    "images/boundaryStop.png"
    "images/fileMenu.png"
    "images/pathResumeClose.png"
    "images/pathResumeLast.png"
    "images/pathResumeStart.png"
    "images/radar-icon.ico"
    "images/radar-icon.png"
    "images/skull.png"
    "images/textures/Compass.png"
    "images/textures/Font.png"
    "images/textures/FrontWheels.png"
    "images/textures/Harvester.png"
    "images/textures/Landscape.png"
    "images/textures/LandscapeNight.png"
    "images/textures/Lift.png"
    "images/textures/SpeedoNedle.png"
    "images/textures/Tractor4WDFront.png"
    "images/textures/Tractor4WDRear.png"
    "images/textures/Turn.png"
    "images/textures/TurnCancel.png"
    "images/textures/TurnManual.png"
    "images/textures/bingMap.png"
    "images/textures/floor.png"
    "images/textures/speedo.png"
    "images/textures/z_LateralManual.png"
    "images/textures/z_NoGPS.png"
    "images/textures/z_QuestionMark.png"
    "images/textures/z_SteerDot.png"
    "images/textures/z_SteerPointer.png"
    "images/textures/z_Tool.png"
    "images/textures/z_Tractor.png"
    "images/vehiclePage4WD.png"
    "images/vehiclePageHarvester.png"
    "images/vehiclePageTractor.png"
    "images/www.png"
    "qml/ABCurvePicker.qml"
    "qml/ABLinePicker.qml"
    "qml/AOGInterface.qml"
    "qml/Compass.qml"
    "qml/DisplayButtons.qml"
    "qml/GPSData.qml"
    "qml/HeadAcheDesigner.qml"
    "qml/HeadlandDesigner.qml"
    "qml/LightBar.qml"
    "qml/LineEditor.qml"
    "qml/LineName.qml"
    "qml/MainWindow.qml"
    "qml/MainWindowTest.qml"
    "qml/PortLight.qml"
    "qml/RecPath.qml"
    "qml/SimController.qml"
    "qml/Speedometer.qml"
    "qml/StartUp.qml"
    "qml/SteerCircle.qml"
    "qml/ToolsWindow.qml"
    "qml/TrackNum.qml"
    "qml/TramLinesEditor.qml"
    "qml/UnitConversion.qml"
    "qml/boundary/BoundaryMenu.qml"
    "qml/boundary/BoundaryRecord.qml"
    "qml/boundary/BoundaryTable.qml"
    "qml/boundary/BoundaryType.qml"
    "qml/components/ButtonColor.qml"
    "qml/components/ComboBoxCustomized.qml"
    "qml/components/ExpandableColumn.qml"
    "qml/components/IconButton.qml"
    "qml/components/IconButtonColor.qml"
    "qml/components/IconButtonText.qml"
    "qml/components/IconButtonTextBeside.qml"
    "qml/components/IconButtonTransparent.qml"
    "qml/components/LatLonTextField.qml"
    "qml/components/MoveableDialog.qml"
    "qml/components/MoveablePopup.qml"
    "qml/components/OutlineText.qml"
    "qml/components/PinButtons.qml"
    "qml/components/ScrollViewExpandableColumn.qml"
    "qml/components/SectionButton.qml"
    "qml/components/SectionButtons.qml"
    "qml/components/SliderCustomized.qml"
    "qml/components/SpinBoxCM.qml"
    "qml/components/SpinBoxCustomized.qml"
    "qml/components/SpinBoxKM.qml"
    "qml/components/SpinBoxM.qml"
    "qml/components/SpinBoxOneDecimal.qml"
    "qml/components/SpinBoxTwoDecimal.qml"
    "qml/components/TestSectionButtons.qml"
    "qml/components/TextLine.qml"
    "qml/components/TimedMessage.qml"
    "qml/components/TimedRectangle.qml"
    "qml/components/TitleFrame.qml"
    "qml/components/TopLine.qml"
    "qml/config/Config.qml"
    "qml/config/ConfigDisplay.qml"
    "qml/config/ConfigFeatures.qml"
    "qml/config/ConfigImplement.qml"
    "qml/config/ConfigImplementAxle.qml"
    "qml/config/ConfigImplementFrontDimensions.qml"
    "qml/config/ConfigImplementOffset.qml"
    "qml/config/ConfigImplementRearDimensions.qml"
    "qml/config/ConfigImplementSections.qml"
    "qml/config/ConfigImplementSectionsSection.qml"
    "qml/config/ConfigImplementSectionsZones.qml"
    "qml/config/ConfigImplementSwitches.qml"
    "qml/config/ConfigImplementTBTDimensions.qml"
    "qml/config/ConfigImplementTiming.qml"
    "qml/config/ConfigImplementTrailingDimensions.qml"
    "qml/config/ConfigModules.qml"
    "qml/config/ConfigModulesPins.qml"
    "qml/config/ConfigSources.qml"
    "qml/config/ConfigSourcesRoll.qml"
    "qml/config/ConfigTrams.qml"
    "qml/config/ConfigVehicleAntenna.qml"
    "qml/config/ConfigVehicleDimensions.qml"
    "qml/config/ConfigVehiclePicker.qml"
    "qml/config/ConfigVehicleSteerSettings.qml"
    "qml/config/ConfigVehicleType.qml"
    "qml/config/ConfigYouTurn.qml"
    "qml/field/FieldData.qml"
    "qml/field/FieldFromExisting.qml"
    "qml/field/FieldFromKML.qml"
    "qml/field/FieldMenu.qml"
    "qml/field/FieldNew.qml"
    "qml/field/FieldOpen.qml"
    "qml/field/FieldTable.qml"
    "qml/field/FieldToolsMenu.qml"
    "qml/interfaces/BoundaryInterface.qml"
    "qml/interfaces/FieldInterface.qml"
    "qml/interfaces/LinesInterface.qml"
    "qml/interfaces/RecordedPathInterface.qml"
    "qml/interfaces/VehicleInterface.qml"
    "qml/steerconfig/ConfigTab.qml"
    "qml/steerconfig/PWMSettingsTab.qml"
    "qml/steerconfig/PurePursuitTab.qml"
    "qml/steerconfig/SensorsTab.qml"
    "qml/steerconfig/SettingsTab.qml"
    "qml/steerconfig/StanleyTab.qml"
    "qml/steerconfig/SteerConfigWindow.qml"
    "qml/steerconfig/WheelAngleSensorTab.qml"
    "qml/tracks/LineDrawer.qml"
    "qml/tracks/LineNudge.qml"
    "qml/tracks/RefNudge.qml"
    "qml/tracks/TrackButtons.qml"
    "qml/tracks/TrackList.qml"
    "qml/tracks/TrackNew.qml"
    "shaders/color_fshader.fsh"
    "shaders/color_vshader.vsh"
    "shaders/colors_fshader.fsh"
    "shaders/colors_vshader.vsh"
    "shaders/colortex_fshader.fsh"
    "shaders/colortex_vshader.vsh"
    "shaders/worldgrid.vsh"
    "sounds/Alarm10.wav"
    "sounds/HydDown.wav"
    "sounds/HydUp.wav"
    "sounds/SectionOff.wav"
    "sounds/SectionOn.wav"
    "sounds/SteerOff.wav"
    "sounds/SteerOn.wav"
    "sounds/TF012.WAV"
    "sounds/rtk_lost.wav"
)

qt_add_resources(QtAgOpenGPS "agopengps"
    PREFIX
        "/"
    FILES
        ${agopengps_resource_files}
)

if((QT_VERSION_MAJOR GREATER 4))
    target_link_libraries(QtAgOpenGPS PRIVATE
        Qt::Widgets
    )
endif()

install(TARGETS QtAgOpenGPS
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

qt_generate_deploy_app_script(
    TARGET QtAgOpenGPS
    FILENAME_VARIABLE deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
